unpackaged/main/default/objects/Deal_Registration__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accedo</fullName>
            </value>
            <value>
                <fullName>Evergent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>